--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header.masthead h1 {
     padding: 14px 0;
 }
 .btn-request {
-    background: #006266;
+    background: #FFA000;
 }
 .fee-btn {
     background-image: linear-gradient(227deg, #FFE329 0%, #FFD21D 17%, #FFC312 94%);
