--- a/style.css
+++ b/style.css
@@ -199,9 +199,9 @@ header.masthead.all-cover {
 
 .upload-cv label {
   background: #F0F0F0;
-  border-radius: 2em;
   border: 0;
   height: 3em;
+  line-height: 35px;
 }
 .upload-cv .custom-file-input:lang(en)~.custom-file-label::after {
   content: "Browse";
